Bugfix: remove ldap css styles that are generic and bleed through to everything else

--- a/sites/all/modules/ldap/ldap_servers/ldap_servers.admin.css
+++ b/sites/all/modules/ldap/ldap_servers/ldap_servers.admin.css
@@ -19,16 +19,3 @@ div.ldap-pwd-present  {
   padding-left: 20px;
   border: solid 1px #beb;
   }
-  
-table th.mixedcase, .mixedcase {
-  text-transform: none;
-}
-  
-form#dblog-filter-form div#edit-type-wrapper,
-table#admin-dblog th img
-{ display: none;}
-code.export-summary {font-weight: normal;}
-
-table#admin-dblog th a,
-table#admin-dblog th {text-decoration: none; color: #000000;}
-th code {}
